Move characters up to avoid text covering faces; flip Chef image

--- a/src/app/interview-pane/interview-pane.component.scss
+++ b/src/app/interview-pane/interview-pane.component.scss
@@ -18,21 +18,25 @@
         right: 0;
         background-size: 100%;
     }
+
+    &[data-bot-name="Chef"] .bot-name {
+        padding-right: 120px;
+    }
     
     &[data-bot-name="Chef"]::before {
-        margin-top: -70px;
+        margin-top: -110px;
         background: url(../../assets/images/chef.png) no-repeat;
         background-size: 100%;
     }
     
     &[data-bot-name="Maid"]::before {
-        margin-top: -45px;
+        margin-top: -120px;
         background: url(../../assets/images/maid.png) no-repeat;
         background-size: 82%;
     }
     
     &[data-bot-name="Butler"]::before {
-        margin-top: -80px;
+        margin-top: -125px;
         background: url(../../assets/images/butler.png) no-repeat;
         background-size: 100%;
     }
